<resources>
    <string name="app_name">FStock</string>
    <string name="app_login">Entrar</string>
    <string name="app_signIn">Registrar</string>
    <string name="app_password">Senha</string>
    <string name="app_userEmail">Email</string>
    <string name="app_userName">Nome</string>
    <string name="app_confirmPass">Confirmar Senha</string>
    <string name="app_estoques">Estoques</string>
    <string name="app_cadastrar">Cadastrar</string>
    <string name="app_gerar">Criar Estoque</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="pessoas">Pessoas</string>
    <string name="estoque">Estoque</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">kn.fstock.prefs</string>
    <string name="title_activity_lista_estoque">ListaEstoqueActivity</string>
</resources>
