<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/app_userName"

        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5px" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_userEmail"

        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5px" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/app_password"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="5px" />
    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/app_confirmPass"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="5px" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_signIn"
        android:layout_weight="0.1"
        android:backgroundTint="@color/colorButtonP"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"/>
</LinearLayout>