<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="140dp"
        android:layout_height="134dp"

        android:layout_gravity="center"
        android:fadingEdge="none|horizontal"
        app:srcCompat="@drawable/ic_fstock_icon3"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_weight="0.5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/app_userEmail"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10px"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/app_password"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="10px"/>
    <Button
        android:id="@+id/btn_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:onClick="mainMenu"
        android:backgroundTint="@color/colorButtonP"
        android:layout_weight="0.1"/>

    <!--android:layout_gravity="center" util centraliza-->

    <Button
        android:id="@+id/btn_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_signIn"
        android:onClick="singIn"
        android:backgroundTint="@color/colorButtonS"
        android:layout_weight="0.1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>